<resources>
    <string name="app_name">projetHEMBERT</string>
    <string name="dungeon_master">Maître du donjon</string>
    <string name="_10" translatable="false">10</string>
    <string name="_100" translatable="false">100</string>
    <string name="fight_result"><b>Résultat du Combat</b></string>
    <string name="waiting">En attente…</string>
    <string name="health__colon">Points de vie :</string>
    <string name="power__colon">Puissance :</string>
    <string name="unexplored_rooms">Pièces non explorées :</string>
    <string name="player">JOUEUR</string>
    <string name="power">Puissance</string>
    <string name="health">Points de vie</string>
    <string name="opponent">ADVERSAIRE</string>
    <string name="attack">Attaque</string>
    <string name="flee">Fuite</string>
    <string name="victory">Victoire</string>
    <string name="defeat">Défaite</string>
    <string name="fight_won">Vous avez remporté le combat</string>
    <string name="fight_lost">Vous avez perdu le combat</string>
    <string name="fight_fled">Vous avez fui</string>
    <string name="monster_assassin">Assassin</string>
    <string name="monster_orc">Orc</string>
    <string name="monster_dragon">Dragon</string>
    <string name="monster_vampire">Vampire</string>
    <string name="room_already_explored">Cette salle à déja été explorée</string>
    <string name="image_of_the_monster">Image du monstre</string>
    <string name="_16" translatable="false">16</string>
    <string name="bonus_image">Image du bonus</string>
    <string name="power_charm">Charme de puissance</string>
    <string name="power_charm_desc">Gagne 5 à 10 points de puissance supplémentaire</string>
    <string name="magic_potion">Potion magique</string>
    <string name="magic_potion_desc">Restaure 1 à 3 points de vie</string>
    <string name="use">Utiliser</string>
    <string name="cancel">Annuler</string>
    <string name="level_with_placeholder">"Niveau: %d"</string>
    <string name="niveau_1">Niveau: 1</string>
    <string name="next_round">Manche suivante</string>
    <string name="replay">Rejouer</string>
    <string name="quit">Quitter</string>
    <string name="settings">Paramètres</string>
    <string name="easy">Facile</string>
    <string name="medium">Moyen</string>
    <string name="hard">Difficile</string>
    <string name="custom">Personnalisé</string>
    <string name="scores">Scores</string>
    <string name="yes">OUI\n</string>
    <string name="back">Retour</string>
    <string name="player_power">Puissance du joueur</string>
    <string name="max_monster_power">Puissance max des monstre</string>
    <string name="player_name">Nom du joueur</string>
    <string name="leaderboard">Tableau des scores</string>
    <string name="restart_game">Redémarrer la partie</string>
    <string name="restart_game_warning">Changer de difficulté arrêtera la partie en cours, êtes vous sur de vouloir continuer ?</string>
    <string name="player_1">Joueur 1</string>
    <string name="level">Niveau</string>
    <string name="date">Date</string>
    <string name="ok">OK</string>
    <string name="already_explored_msg">La salle a déja été explorée</string>
    <string name="night_mode">Mode nuit</string>
    <string name="player_">Joueur</string>
</resources>