<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/primary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dungeon_master"
        android:textColor="@color/secondary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/niveau_1"
        android:textColor="@color/secondaryVariant"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/difficulty"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/medium"
        android:textColor="@color/secondaryVariant"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <GridLayout
        android:id="@+id/buttonsGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:columnCount="4"
        android:padding="0dp"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsGrid">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="3dip"
                android:textColor="@color/secondary"
                android:text="@string/unexplored_rooms" />

            <TextView
                android:id="@+id/unexploredRooms"
                android:padding="3dip"
                android:textColor="@color/secondaryVariant"
                android:text="@string/_16" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="3dip"
                android:textColor="@color/secondary"
                android:text="@string/power__colon" />

            <TextView
                android:id="@+id/power"
                android:padding="3dip"
                android:layout_width="wrap_content"
                android:textColor="@color/secondaryVariant"
                android:text="@string/_100" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="3dip"
                android:textColor="@color/secondary"
                android:text="@string/health__colon" />

            <TextView
                android:id="@+id/health"
                android:padding="3dip"
                android:textColor="@color/secondaryVariant"
                android:text="@string/_10" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/fightResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fight_result"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/fightResultContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/waiting"
        android:textColor="@color/secondaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fightResultTitle" />

    <ImageButton
        android:id="@+id/nextRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_round"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fightResultContent"
        app:layout_constraintTop_toBottomOf="@+id/fightResultTitle"
        app:srcCompat="@android:drawable/ic_media_ff"
        app:tint="@color/primary"
        android:backgroundTint="@color/secondary"/>

</androidx.constraintlayout.widget.ConstraintLayout>