<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/primary"
    tools:context=".activities.RoomActivity">

    <TextView
        android:id="@+id/playerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:layout_marginTop="48dp"
        android:textSize="20sp"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bonusImage"
        android:layout_width="125dp"
        android:layout_height="97dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/bonus_image"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bonus_health_potion" />

    <TextView
        android:id="@+id/powerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/power"
        android:textColor="@color/secondaryVariant"
        app:layout_constraintEnd_toStartOf="@+id/healthLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerLabel" />

    <TextView
        android:id="@+id/healthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health"
        android:textColor="@color/secondaryVariant"
        app:layout_constraintBaseline_toBaselineOf="@+id/powerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/powerLabel" />

    <TextView
        android:id="@+id/power"
        android:layout_width="58dp"
        android:layout_height="16dp"
        android:text="@string/_100"
        android:textColor="@color/secondaryVariant"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/powerLabel"
        app:layout_constraintTop_toBottomOf="@+id/powerLabel" />

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textColor="@color/secondaryVariant"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/healthLabel"
        app:layout_constraintTop_toBottomOf="@+id/healthLabel" />

    <TextView
        android:id="@+id/monsterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opponent"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/power" />

    <ImageView
        android:id="@+id/monsterImage"
        android:layout_width="149dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_of_the_monster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monsterLabel"
        app:srcCompat="@drawable/monster_vampire" />

    <TextView
        android:id="@+id/monsterType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/monster_vampire"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monsterImage" />

    <TextView
        android:id="@+id/monsterPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_100"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monsterType" />

    <Button
        android:id="@+id/attack"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/attack"
        app:layout_constraintBaseline_toBaselineOf="@+id/flee"
        app:layout_constraintEnd_toStartOf="@+id/flee"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/button" />

    <Button
        android:id="@+id/flee"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/flee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/attack"
        app:layout_constraintTop_toBottomOf="@+id/monsterPower"
        style="@style/button"/>

</androidx.constraintlayout.widget.ConstraintLayout>