<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomActivity">

    <TextView
        android:id="@+id/player_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/player"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/power_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/power"
        app:layout_constraintEnd_toStartOf="@+id/health_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_label" />

    <TextView
        android:id="@+id/health_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health"
        app:layout_constraintBaseline_toBaselineOf="@+id/power_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/power_label" />

    <TextView
        android:id="@+id/power"
        android:layout_width="58dp"
        android:layout_height="16dp"
        android:text="@string/_100"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/power_label"
        app:layout_constraintTop_toBottomOf="@+id/power_label" />

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/health_label"
        app:layout_constraintTop_toBottomOf="@+id/health_label" />

    <TextView
        android:id="@+id/opponent_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opponent"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/power" />

    <TextView
        android:id="@+id/opponent_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opponent_label" />

    <Button
        android:id="@+id/attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack"
        app:layout_constraintBaseline_toBaselineOf="@+id/flee"
        app:layout_constraintEnd_toStartOf="@+id/flee"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/flee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/flee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/attack"
        app:layout_constraintTop_toBottomOf="@+id/opponent_power" />
</androidx.constraintlayout.widget.ConstraintLayout>